objects/FLODocs__Temporal_Customization__c.object
<CustomObject>
    <description>This object will hold the customizations during a deployment</description>
    <fields>
        <fullName>FLODocs__API_Name__c</fullName>
        <label>API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Activation__c</fullName>
        <formula>AND(OR(
				    ISPICKVAL(FLODocs__New_Tracking_Status__c,&quot;Tracked, Blocking&quot;),
				    ISPICKVAL(FLODocs__New_Tracking_Status__c,&quot;Tracked, Non-Blocking&quot;)
			    ),
				ISPICKVAL(FLODocs__Customization__r.FLODocs__Data_Change_Tracking__c,&quot;Not Tracked&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Temporal Customizations</relationshipLabel>
        <relationshipName>Temporal_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deactivation__c</fullName>
        <formula>AND(OR(
				    ISPICKVAL(FLODocs__Customization__r.FLODocs__Data_Change_Tracking__c,&quot;Tracked, Blocking&quot;),
				    ISPICKVAL(FLODocs__Customization__r.FLODocs__Data_Change_Tracking__c,&quot;Tracked, Non-Blocking&quot;)
			    ),
				ISPICKVAL(FLODocs__New_Tracking_Status__c,&quot;Not Tracked&quot;)
)</formula>
        <label>Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Is_Triggerable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Triggerable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Label__c</fullName>
        <label>Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__New_Tracking_Status__c</fullName>
        <label>New Tracking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Tracked</fullName>
                </value>
                <value>
                    <fullName>Tracked, Blocking</fullName>
                </value>
                <value>
                    <fullName>Tracked, Non-Blocking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Temporal_Process__c</fullName>
        <label>Temporal Process</label>
        <referenceTo>FLODocs__Temporal_Process__c</referenceTo>
        <relationshipLabel>Temporal Customizations</relationshipLabel>
        <relationshipName>Temporal_Customizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLODocs__Update_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Temporal Customization</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Temporal Customization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporal Customizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>